# code-graph

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_NEW_FEATURES.md  README.md  dev.sh  docker-compose.yml
backend/: Dockerfile  README.md  mcp_server.py  ontology.ttl  pyproject.toml
backend/app/: config.py  dependencies.py  indexer.py  main.py
backend/app/ai/: nl_sparql.py  wiki_search.py
backend/app/analysis/: blast_radius.py  clustering.py  execution_flow.py  graph_to_networkx.py
backend/app/api/: analysis.py  graph.py  projects.py  wiki.py
backend/app/ingestion/: github.py  language_detector.py  zip_handler.py
backend/app/models/: project.py
backend/app/parsing/: __init__.py  base.py  c.py  config_parsers.py  entry_point_scorer.py  framework_detector.py  golang.py  java.py  javascript.py  kotlin.py  markup.py  python.py  ruby.py  rust.py  typescript.py
backend/app/rdf/: builder.py  graph_store.py  ontology.py
backend/app/storage/: project_store.py
backend/app/wiki/: generator.py  sparql_queries.py
backend/app/ws/: indexing.py
backend/mcp_tools/: client.py  tools_analysis.py  tools_graph.py  tools_projects.py
backend/tests/: conftest.py  test_config.py
backend/tests/test_analysis/: test_blast_radius.py  test_clustering.py  test_execution_flow.py  test_graph_to_networkx.py
backend/tests/test_api/: test_analysis_endpoints.py  test_graph.py  test_projects.py  test_wiki_endpoints.py
backend/tests/test_ingestion/: test_github.py  test_language_detector.py  test_zip_handler.py
docs/: architecture.md  mcp-server.md  (+1 more)
(+72 files in other folders)
