[project]
name = "code-graph-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.43",
    "rdflib>=7.0.0",
    "owlrl>=6.0.2",
    "networkx>=3.3",
    "python-louvain>=0.16",
    "tree-sitter>=0.22.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-kotlin>=0.3.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
